RESOLVED FIXED276291
Fix css/css-flexbox/flex-item-compressible-002.html (#11 and #12)
https://bugs.webkit.org/show_bug.cgi?id=276291
Summary Fix css/css-flexbox/flex-item-compressible-002.html (#11 and #12)
alan
Reported 2024-07-06 14:46:27 PDT
ssia
Attachments
Patch (8.20 KB, patch)
2024-07-06 15:05 PDT, alan
no flags
Patch (8.20 KB, patch)
2024-07-06 15:08 PDT, alan
no flags
[fast-cq]Patch (8.45 KB, patch)
2024-07-07 07:32 PDT, alan
no flags
alan
Comment 1 2024-07-06 15:05:16 PDT
alan
Comment 2 2024-07-06 15:08:16 PDT
alan
Comment 3 2024-07-07 07:32:47 PDT
Created attachment 471828 [details] [fast-cq]Patch
EWS
Comment 4 2024-07-07 19:31:20 PDT
Committed 280722@main (1fd0de1fde37): <https://commits.webkit.org/280722@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471828 [details].
Radar WebKit Bug Importer
Comment 5 2024-07-07 19:32:13 PDT
Note You need to log in before you can comment on or make changes to this bug.