Fix css/css-flexbox/flex-item-compressible-002.html (#11 and #12) https://bugs.webkit.org/show_bug.cgi?id=276291

Reviewed by Antti Koivisto.

In 162878@main we went from isPercent() to isPercentOrCalculated() without adding support
for the "calculated" part.
(FIXME: we should find a common place for this)

https://drafts.csswg.org/css-sizing-3/#replaced-percentage-min-contribution
"If the box is replaced, a cyclic percentage in the value of any max size property or preferred size property (width/max-width/height/max-height), is resolved against zero when calculating the min-content contribution in the corresponding axis"

and

https://drafts.csswg.org/css-sizing-3/#min-content-zero
"In addition to the replaced elements listed in HTML 14.4 [HTML], the following HTML elements are also considered to be replaced elements...select, textarea, progress, meter..."

* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/flex-item-compressible-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/flex-item-compressible-002-expected.txt:
* Source/WebCore/rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::computeIntrinsicLogicalWidths const):
* Source/WebCore/rendering/RenderListBox.cpp:
(WebCore::RenderListBox::computeIntrinsicLogicalWidths const):
* Source/WebCore/rendering/RenderMenuList.cpp:
(RenderMenuList::computeIntrinsicLogicalWidths const):
* Source/WebCore/rendering/RenderSlider.cpp:
(WebCore::RenderSlider::computeIntrinsicLogicalWidths const):
* Source/WebCore/rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::computeIntrinsicLogicalWidths const):

Canonical link: https://commits.webkit.org/280722@main